--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Стена памяти</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root" class="min-h-[100%]"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
