--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/media/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
-    <title>Стена памяти</title>
+    <title>Книга памяти</title>
   </head>
   <body>
     <div id="root" class="min-h-[100%]"></div>
